@@ -1,0 +1,5 @@
+Summary: Support multiple mice
+Type: boolean
+
+On macOS, support for multiple mice is disabled by default due to the system
+showing a security warning each time FS-UAE runs.
